--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,28 +121,19 @@ footer {
     background-color: #000000 !important;
 }
 
-/* ----------------------- PORTFOLIO PAGE --------------------- */
-/* portfolio photos*/
-.portfolio-col {
-    text-align: center;
-}
-.portfolio-photos {
-    width: 240px; 
-    border: 1px solid #000000; 
-    margin: 20px 20px 20px 20px;
-    display:inline-block;
-}
-.portfolio-photos:hover {
-    opacity: 50%;
-} 
-.portfolio-col {
-    margin: 0px 5px 0px 0px ;
-}
-
 /* modal */
 .modal-header {
     border-bottom: none !important;
 }
-.modal-content {
-    background-color: #212529 !important; 
-}  
+
+/* ----------------------- VIDEOS PAGE --------------------- */
+
+.video {
+    border: 5px dotted #9933cc;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 400px;
+}
+
+
