--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@
 .orange {
     color: #ff9933;
 }
+.green {
+    color: #abfc8a;
+}
 /* header font */
 h3 {
     font-family: 'Encode Sans SC', sans-serif;
@@ -71,6 +74,8 @@ body {
     box-shadow: 10px 10px #00000090;  
     border: 1px solid #000000;
     border-radius: 5px;
+    height: 100%;
+    position: relative; /* magic sauce */
 }
 li {
     list-style-type: none;
@@ -89,6 +94,7 @@ footer {
     background-color: #111116; 
     position: fixed;
     bottom: 0; 
+    left: 0; 
     width: 100%; 
     text-align: center; 
     border-top: 1px solid #ff9933;
@@ -132,15 +138,23 @@ footer {
     border: 5px dotted #9933cc;
     margin-left: auto;
     margin-right: auto;
-    display: block;
-    width: 400px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* ----------------------- PHOTOS PAGE --------------------- */
+
 .photo {
     width: 240px; 
     margin: 10px 10px 10px 10px;
     border-radius: 10px;
-    border: 2px dotted #9933cc;
+    border: 5px dotted #9933cc;
 }
 
+.carousel{
+    margin: 0 auto;
+    max-width: 600px;
+    border-radius: 10px;
+    border: 5px dotted #9933cc;
+}
