--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,15 @@ footer {
     border-bottom: none !important;
 }
 
+.dj-photo {
+    margin: 10px auto;
+    width: 100px;
+    height: auto;
+    border-radius: 50%;
+    border: 1px solid #ff9933;
+
+}
+
 /* ----------------------- VIDEOS PAGE --------------------- */
 
 .video {
