--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,8 +69,9 @@ body {
     margin: 80px 0px 100px 0px;
 }
 .main-content-box {
+    max-width: 1000px;
     padding: 20px; 
-    background-color: #000000; 
+    background-color: #000000da; 
     box-shadow: 10px 10px #00000090;  
     border: 1px solid #000000;
     border-radius: 5px;
@@ -105,8 +106,14 @@ footer {
     margin: 5px 3px 0px 3px; 
 }
 
+.pinup-girl {
+    width: 250px; 
+    position: fixed;
+    right: 0px;
+    bottom: 70px;
+}
+
 /* ----------------------- MAIN PAGE ---------------------- */
-/* kiss gif */
 .flyer {
     width: 200px; 
     margin: 0px 20px 10px 0px; 
