--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ footer {
 }
 .flyer-large {
     width: 420px; 
-    margin: 20px;
+    margin: 0 auto;
     border: 5px solid #ff9933;
     justify-content:center;
 }
