fixing modal close button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ footer {
     padding: 20px;
 }
 
-/* modal close button */
+/* modal close button
 .close {
     color: #ffcc33 !important; 
     position: absolute;
@@ -165,7 +165,7 @@ footer {
 }
 .far {
     color: #ffcc33 !important; 
-}
+} */
 
 /* ----------------------- VIDEOS PAGE --------------------- */
 
